--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -4,17 +4,32 @@ body {
 }
 
 .caixa {
-    width: 100%;
-    height: 70px;
+    width: 100vw;
+    height: 80px;
     background-color: blue;
 }
 
 header {
-    width: 100%;
-    height: 60px;
+    width: 100vw;
+    height: 70px;
     background-color: gray;
     color: blue;
     display: flex;
     align-items: center;
-    justify-content: center;
+    gap: 40%;
+}
+
+.titulo{
+    padding: 2%;
+}
+
+.pages{
+
+}
+
+.elements{
+    display: flex;
+    flex-direction: row;
+    gap: 20%;
+    white-space: nowrap;
 }
