--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,35 +1,20 @@
-body {
-    margin: 0;
-    padding: 0;
+$primary-color: #8D0B41;
+$bg-color: #FFF8E6;
+$header-color: #D6CFB4;
+$blue-1: #007bff;
+
+* {
+    margin: 0px;
+    padding: 0px;
 }
 
-.caixa {
+.container {
     width: 100vw;
-    height: 80px;
-    background-color: blue;
+    height: 100vh;
+    background-color: $bg-color;
 }
 
-header {
-    width: 100vw;
-    height: 70px;
-    background-color: gray;
-    color: blue;
-    display: flex;
-    align-items: center;
-    gap: 40%;
-}
-
-.titulo{
-    padding: 2%;
-}
-
-.pages{
-
-}
-
-.elements{
-    display: flex;
-    flex-direction: row;
-    gap: 20%;
-    white-space: nowrap;
+.titulo {
+    padding: 25px;
+    color: $primary-color;
 }
