--- a/src/components/Footer/sfooter.scss
+++ b/src/components/Footer/sfooter.scss
@@ -1,6 +1,7 @@
 $primary-color: #8D0B41;
-$header-color: #D6CFB4;
+$footer-color: #D6CFB4;
 $blue-1: #007bff;
+$secundary-color: #b62762;
 
 * {
     margin: 0px;
@@ -10,11 +11,12 @@ $blue-1: #007bff;
 }
 
 
-header {
+footer {
     width: 100%;
-    height: 80px;
-    background-color: $header-color;
+    height: 250px;
+    background-color: $footer-color;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);;
@@ -25,23 +27,17 @@ header {
     color: $primary-color;
 }
 
-.logo_img {
-    height: 55px;
-    width: 110px;
-    object-fit: contain;
-}
+.nav_footer {
 
-.nav_header {
+    justify-content: center;
+    align-items: center;
 
     .pages {
         text-decoration: none;
-        color: $primary-color;
+        color: $secundary-color;
         font-weight: bold;
         transition: 0.4s;
         font-size: 18px;
-        border-radius: 2px;
-        border: 2px solid #ffffff;
-        padding: 10px 25px;
         margin: 0 10px;
         justify-content: center; 
         align-items: center;
@@ -49,20 +45,30 @@ header {
 
         &:hover {
             color: $blue-1;
-            background-color: #ffffff;
         }
     }
 
-    .list_header {
+    .list_footer {
+        justify-content: center;
+        align-items: center;
         list-style-type: none;
         display: flex;
         gap: 10px;
         width: 520px;
+        flex-direction: column;
     }
 
     li {
         display: inline;
     }
+    
+}
+
+.copy_txt{
+    color: $primary-color;
+    font-weight: bold;
+    font-size: 17px;
+    margin-bottom: 10px
 }
 
 @media (max-width: 1300px) {
@@ -74,14 +80,14 @@ header {
 
     }
 
-    .nav_header {
+    .nav_footer {
 
         .pages {
             font-size: 16px;
             padding: 8px 20px;
         }
 
-        .list_header {
+        .list_footer {
             list-style-type: none;
             display: flex;
             gap: 10px;
