--- a/src/pages/Home/shome.scss
+++ b/src/pages/Home/shome.scss
@@ -21,7 +21,40 @@ $blue-1: #007bff;
     color: $primary-color;
 }
 
-.area_txt01{
+.area_beneficios{
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
+  padding: 15px;
+
+
+  .txt_beneficios{
+    padding: 16px;
+    height: 500px;
+    width: 800px;
+    text-align: justify;
+    color: $primary-color;
+    font-size: large;
+    background-color: $bg-prod;
+    border-radius: 16px;
+  }
+
+  .img_ben{
+    height: 400px;
+    width: 400px;
+    border-radius: 10px;
+    
+  }
+
+  .sub02_txt{
+    font-size: 25px;
+    font-weight: bold; 
+    color: $secundary-color;
+}
+
+}
+
+.area_destaque{
 
     width: 100%;
     height: 80px;
@@ -31,7 +64,7 @@ $blue-1: #007bff;
     align-items: center;
     justify-content: center;
 
-    .produtos{
+    .sub_txt{
         font-size: 25px;
         font-weight: bold; 
     }
