--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,6 +1,7 @@
 $primary-color: #8D0B41;
-$header-color: #D6CFB4;
+$footer-color: #D6CFB4;
 $blue-1: #007bff;
+$secundary-color: #b62762;
 
 * {
     margin: 0px;
@@ -10,38 +11,34 @@ $blue-1: #007bff;
 }
 
 
-header {
+footer {
     width: 100%;
-    height: 80px;
-    background-color: $header-color;
+    height: 250px;
+    background-color: $footer-color;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);;
 }
 
-.titulo {
+.logo_txt_ft {
+    font-size: 25px;
     padding: 25px;
     color: $primary-color;
 }
 
-.logo_img {
-    height: 55px;
-    width: 110px;
-    object-fit: contain;
-}
+.nav_footer {
 
-.nav_header {
+    justify-content: center;
+    align-items: center;
 
-    .pages {
+    .pages_ft {
         text-decoration: none;
-        color: $primary-color;
+        color: $secundary-color;
         font-weight: bold;
         transition: 0.4s;
         font-size: 18px;
-        border-radius: 2px;
-        border: 2px solid #ffffff;
-        padding: 10px 25px;
         margin: 0 10px;
         justify-content: center; 
         align-items: center;
@@ -49,43 +46,59 @@ header {
 
         &:hover {
             color: $blue-1;
-            background-color: #ffffff;
         }
     }
 
-    .list_header {
+    .list_footer {
+        justify-content: center;
+        align-items: center;
         list-style-type: none;
         display: flex;
         gap: 10px;
         width: 520px;
+        flex-direction: column;
     }
 
     li {
         display: inline;
     }
+    
 }
 
-@media (max-width: 1300px) {
+.copy_txt_ft{
+    color: $primary-color;
+    font-weight: bold;
+    font-size: 17px;
+    margin-bottom: 10px
+}
 
-    .logo_img {
-        height: 50px;  
-        width: 100px; 
-        object-fit: contain;
+@media (max-width: 1100px) {
 
-    }
+    .nav_footer {
 
-    .nav_header {
-
-        .pages {
+        .pages_ft {
             font-size: 16px;
             padding: 8px 20px;
         }
 
-        .list_header {
+        .list_footer {
             list-style-type: none;
             display: flex;
             gap: 10px;
             width: 460px;
         }
+    }
+    
+    .logo_txt_ft {
+        font-size: 20px;
+        padding: 25px;
+        color: $primary-color;
+    }
+
+    .copy_txt_ft{
+        color: $primary-color;
+        font-weight: bold;
+        font-size: 14px;
+        margin-bottom: 10px
     }
 }
