--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,7 +1,6 @@
 $primary-color: #8D0B41;
-$footer-color: #D6CFB4;
+$header-color: #D6CFB4;
 $blue-1: #007bff;
-$secundary-color: #b62762;
 
 * {
     margin: 0px;
@@ -11,33 +10,34 @@ $secundary-color: #b62762;
 }
 
 
-footer {
+header {
     width: 100%;
-    height: 250px;
-    background-color: $footer-color;
+    height: 80px;
+    background-color: $header-color;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);;
 }
 
-.titulo {
-    padding: 25px;
-    color: $primary-color;
+
+.logo_img_hd {
+    height: 55px;
+    width: 110px;
+    object-fit: contain;
 }
 
-.nav_footer {
+.nav_header {
 
-    justify-content: center;
-    align-items: center;
-
-    .pages {
+    .pages_hd {
         text-decoration: none;
-        color: $secundary-color;
+        color: $primary-color;
         font-weight: bold;
         transition: 0.4s;
         font-size: 18px;
+        border-radius: 2px;
+        border: 2px solid #ffffff;
+        padding: 10px 25px;
         margin: 0 10px;
         justify-content: center; 
         align-items: center;
@@ -45,46 +45,47 @@ footer {
 
         &:hover {
             color: $blue-1;
+            background-color: #ffffff;
         }
     }
 
-    .list_footer {
-        justify-content: center;
-        align-items: center;
+    .list_header {
         list-style-type: none;
         display: flex;
         gap: 10px;
         width: 520px;
-        flex-direction: column;
     }
 
     li {
         display: inline;
     }
+}
+
+@media (max-width: 1100px) {
     
-}
 
-.copy_txt{
-    color: $primary-color;
-    font-weight: bold;
-    font-size: 17px;
-    margin-bottom: 10px
-}
+    .logo_img_hd {
+        height: 50px;  
+        width: 100px; 
+        object-fit: contain;
+        transition: 0.4s;
 
-@media (max-width: 1300px) {
+    }
 
-    .nav_footer {
+    .nav_header {
 
-        .pages {
+        .pages_hd {
             font-size: 16px;
             padding: 8px 20px;
+            transition: 0.4s;
         }
 
-        .list_footer {
+        .list_header {
             list-style-type: none;
             display: flex;
             gap: 10px;
             width: 460px;
+            transition: 0.4s;
         }
     }
 }
