--- a/src/pages/Contato/Formulario/forms.scss
+++ b/src/pages/Contato/Formulario/forms.scss
@@ -1,13 +1,13 @@
 $primary-color: #8D0B41;
 $secundary-color: #b62762;
 $bg-color: #faefd2;
-$bg-prod: white;
+$white-txt-bg: white;
 $blue-1: #007bff;
 
 .content_frm {
     padding: 16px;
     margin: 16px;
-    background-color: $bg-prod;
+    background-color: $white-txt-bg;
     margin: 16px;
     height: 100%;
     width: 400px;
@@ -28,28 +28,67 @@ $blue-1: #007bff;
     flex-direction: column;
     padding: 16px;   
     margin: 16px;
-    border: solid 2px;
+    border: solid 2px $secundary-color;
     border-radius: 10px;
+    color: $secundary-color;
+    font-weight: 600;
 
     .linha{
         display: flex;
         flex-direction: column;
-        gap:10px;
+        padding-bottom: 20px; 
+    }
+
+    .inputs {
+        padding: 5px;
+        outline: none; 
+        border: none;
+        border-bottom: 2px solid $primary-color; 
+        color: $primary-color; 
+        transition: 0.6s; 
+
     
-        .inputs{
-            padding: 5px;
+        &::placeholder {
+            color: $secundary-color; 
+            transition: 0.6s;
+        }
+    
+        &:focus {
+            border-color: $white-txt-bg;
+            color: $white-txt-bg; 
+            background-color: $primary-color; 
+    
+            &::placeholder {
+                color: $white-txt-bg;
+            }
         }
     }
     
     .btn{
-        height: 30px;
-        width: 100px;
+        height: 40px;
+        width: 100%;
+        background-color: $secundary-color;
+        color: $white-txt-bg;
+        font-size: 15px;
+        border-radius: 5px;
+        border: 2px solid $white-txt-bg;
+        transition: 0.4s;
+        cursor: pointer;
+
+        &:hover{
+            color: $secundary-color;
+            background-color: $white-txt-bg;
+            border-color: $primary-color;
+            font-weight: 700;
+        }
     }
     
     .opcoes{
         display: flex;
         flex-direction: column;
-        gap: 8px;
+        padding-bottom: 20px;
+        gap: 5px;
+        font-weight: 200;
     }
 }
 
