--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -89,3 +89,84 @@ header {
         }
     }
 }
+
+@media (max-width: 1100px) {
+    
+
+    .logo_img_hd {
+        height: 50px;  
+        width: 100px; 
+        object-fit: contain;
+        transition: 0.4s;
+
+    }
+
+    .nav_header {
+
+        .pages_hd {
+            font-size: 16px;
+            padding: 8px 20px;
+            transition: 0.4s;
+        }
+
+        .list_header {
+            list-style-type: none;
+            display: flex;
+            gap: 10px;
+            width: 460px;
+            transition: 0.4s;
+        }
+    }
+}
+
+@media (max-width: 650px) {
+    
+
+    .logo_img_hd {
+        height: 45px;  
+        width: 90px; 
+    }
+
+    .nav_header {
+
+        .pages_hd {
+            font-size: 15px;
+            background-color: transparent;
+            border: none;
+
+            &:hover {
+                color: $blue-1;
+                background-color: transparent;
+            }
+        }
+
+        .list_header {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            width: 180px;
+            align-items: center;
+        }
+    }
+}
+
+@media (max-width: 300px) {
+    
+
+    .nav_header {
+
+        .pages_hd {
+            font-size: 13px;
+            background-color: transparent;
+            border: none;
+        }
+
+        .list_header {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            width: 180px;
+            align-items: center;
+        }
+    }
+}
