--- a/src/pages/Contato/contato.scss
+++ b/src/pages/Contato/contato.scss
@@ -36,6 +36,12 @@ $blue-1: #007bff;
     }
 }
 
+.sub_txt {
+    font-size: 25px;
+    font-weight: bold;
+    color: $secundary-color;
+  }
+
 .area_txt_frm {
     padding: 16px;
     margin: 16px;
@@ -49,3 +55,89 @@ $blue-1: #007bff;
 
 }
 
+@media (max-width: 1024px) {
+
+    .area_frm{
+      flex-direction: column;
+      gap: 10px;
+      margin: 15px;
+      padding: 15px;
+      padding: 10px;
+      justify-content: center;
+      align-items: center;
+  
+    
+    
+      .area_txt_frm {
+        padding: 16px;
+        height: 100%;
+        width: 100%;
+        text-align: justify;
+        color: $primary-color;
+        font-size: large;
+        background-color: $bg-prod;
+        border-radius: 16px;
+      }
+    
+    
+      .sub_txt {
+        font-size: 25px;
+        font-weight: bold;
+        color: $secundary-color;
+      }
+    }
+  
+    .area_destaque_frm {
+      height: 72px;
+  
+      .titulo_txt_fmr {
+        font-size: 25px;
+        font-weight: bold;
+    }
+  }
+  
+  }
+  
+  @media (max-width: 700px) {
+  
+    .area_fmr {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin: 15px;
+      padding: 15px;
+      align-items: center;
+      padding: 10px;
+      justify-content: center;
+  
+    
+    
+      .area_txt_fmr {
+        padding: 16px;
+        font-size: 16px;
+        border-radius: 18px;
+        justify-content: right;
+      }
+    
+    
+      .sub_txt {
+        font-size: 18px;
+        font-weight: bold;
+        color: $secundary-color;
+      }
+  
+  
+    
+    }
+  
+    .area_destaque_fmr {
+      width: 100%;
+      height: 68px;
+  
+      .titulo_txt_fmr {
+        font-size: 20px;
+        font-weight: bold;
+    }
+  }
+  
+  }
