--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -8,20 +8,26 @@ $blue-1: #007bff;
   margin: 0px;
   padding: 0px;
   font-family: Cambria, Times, serif, Helvetica, sans-serif;
+  transition: 0.4s;
+  box-sizing: border-box;
+  
 }
 
 .container {
   width: 100%;
   height: 100%;
   background-color: $bg-color;
+  overflow-x: hidden;
+
 }
 
 .titulo_home {
   padding: 25px;
   color: $primary-color;
+  transition: 0.4s;
 }
 
-.area_destacada {
+.area_destacada_home {
   width: 100%;
   height: 80px;
   background-color: $secundary-color;
@@ -48,8 +54,8 @@ $blue-1: #007bff;
 
   .txt_beneficios_home {
     padding: 16px;
-    height: 500px;
-    width: 800px;
+    height: 100%;
+    width: 100%;
     text-align: justify;
     color: $primary-color;
     font-size: large;
@@ -72,10 +78,9 @@ $blue-1: #007bff;
 
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1024px) {
 
   .area_beneficios_home {
-    display: flex;
     flex-direction: column;
     gap: 10px;
     margin: 15px;
@@ -87,7 +92,7 @@ $blue-1: #007bff;
     .txt_beneficios_home {
       padding: 16px;
       height: 100%;
-      width: 950px;
+      width: 100%;
       text-align: justify;
       color: $primary-color;
       font-size: large;
@@ -107,29 +112,72 @@ $blue-1: #007bff;
       font-weight: bold;
       color: $secundary-color;
     }
+  }
+
+  .area_destacada_home {
+    height: 72px;
 
     .titulo_destaque_home {
-      font-size: 20px;
+      font-size: 25px;
       font-weight: bold;
   }
+}
+
+.titulo_home {
+  font-size: 25px;
+}
+
+
+}
+
+@media (max-width: 700px) {
+
+  .area_beneficios_home {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 15px;
+    padding: 15px;
+    align-items: center;
+    padding: 10px;
+  
+  
+    .txt_beneficios_home {
+      padding: 16px;
+      height: 100%;
+      width: 100%;
+      font-size: 16px;
+      border-radius: 18px;
+    }
+  
+    .img_ben_home {
+      height: 300px;
+      width: 300px;
+      border-radius: 10px;
+  
+    }
+  
+    .sub_txt_home {
+      font-size: 18px;
+      font-weight: bold;
+      color: $secundary-color;
+    }
+
+
   
   }
 
   .area_destacada_home {
     width: 100%;
-    height: 50px;
-    background-color: $primary-color;
-    color: $bg-color;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+    height: 68px;
 
     .titulo_destaque_home {
-        font-size: 23px;
-        font-weight: bold;
-    }
+      font-size: 20px;
+      font-weight: bold;
+  }
 }
 
-
+.titulo_home {
+  font-size: 20px;
+}
 }
