--- a/src/pages/Sobre/sobre.scss
+++ b/src/pages/Sobre/sobre.scss
@@ -8,12 +8,14 @@ $blue-1: #007bff;
     margin: 0px;
     padding: 0px;
     font-family: Cambria, Times, serif, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
 .container {
     width: 100%;
     height: 100%;
     background-color: $bg-color;
+    overflow-x: hidden;
 }
 
 .sub_txt {
@@ -27,14 +29,14 @@ $blue-1: #007bff;
     justify-content: space-between;
     margin: 30px;
     padding: 15px;
-    height:600px;
+    height:100%;
   
   
     .area_txt{
       padding: 16px;
       margin: 16px;
-      height: 425px;
-      width: 800px;
+      height: 100%;
+      width: 100%;
       text-align: justify;
       color: $primary-color;
       font-size: large;
@@ -66,4 +68,102 @@ $blue-1: #007bff;
         font-size: 25px;
         font-weight: bold; 
     }
+}
+
+@media (max-width: 1024px) {
+
+  .area{
+    flex-direction: column;
+    gap: 10px;
+    margin: 15px;
+    padding: 15px;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+
+  
+  
+    .area_txt {
+      padding: 16px;
+      height: 100%;
+      width: 100%;
+      text-align: justify;
+      color: $primary-color;
+      font-size: large;
+      background-color: $bg-prod;
+      border-radius: 16px;
+    }
+  
+    .img_img {
+      height: 400px;
+      width: 400px;
+      border-radius: 10px;
+  
+    }
+  
+    .sub_txt {
+      font-size: 25px;
+      font-weight: bold;
+      color: $secundary-color;
+    }
+  }
+
+  .area_cdestaque {
+    height: 72px;
+
+    .titulo_txt {
+      font-size: 25px;
+      font-weight: bold;
+  }
+}
+
+}
+
+@media (max-width: 700px) {
+
+  .area {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 15px;
+    padding: 15px;
+    align-items: center;
+    padding: 10px;
+    justify-content: center;
+
+  
+  
+    .area_txt {
+      padding: 16px;
+      font-size: 16px;
+      border-radius: 18px;
+    }
+  
+    .img_img {
+      height: 300px;
+      width: 300px;
+      border-radius: 10px;
+  
+    }
+  
+    .sub_txt {
+      font-size: 18px;
+      font-weight: bold;
+      color: $secundary-color;
+    }
+
+
+  
+  }
+
+  .area_cdestaque {
+    width: 100%;
+    height: 68px;
+
+    .titulo_txt {
+      font-size: 20px;
+      font-weight: bold;
+  }
+}
+
 }
