--- a/src/pages/Home/Produtos/produtos.scss
+++ b/src/pages/Home/Produtos/produtos.scss
@@ -32,6 +32,7 @@ $blue-1: #007bff;
     display: flex;
     justify-content: space-between;
     padding: 10px;
+    gap: 12px;
 }
 
 
@@ -46,6 +47,7 @@ $blue-1: #007bff;
     height: 450px;
     margin: 16px;
     transition: 0.2s;
+    gap:5px;
 
     &:hover {
         height: 100%;
@@ -66,6 +68,7 @@ $blue-1: #007bff;
         font-weight: bold;
         margin-bottom: 12px;
         color: $secundary-color;
+        text-align: center;
     }
 
     .prod_image-container {
@@ -90,12 +93,18 @@ $blue-1: #007bff;
         padding: 10px;
         pointer-events: none;
         position: static;
+
+
+        strong{
+            transition: 0.1s;
+        }
     }
 
     .desc_prod1 {
         color: $primary-color;
         font-size: large;
         color: $primary-color;
+        text-align: center;
         text-decoration: underline;
     }
 
